syntax = "proto3";

package noble.swap.module.v1;

import "cosmos/app/v1alpha1/module.proto";

// Module is the config object of the Noble Swap module.
message Module {
  option (cosmos.app.v1alpha1.module) = {go_import: "swap.noble.xyz"};

  // authority defines the custom module authority.
  string authority = 1;

  // base_denom defines the base denom that is used as the standard pairing denomination for all liquidity pools.
  string base_denom = 2;

  // min_swap_amount specifies the minimum amount of the tokens required to execute a swap.
  int64 min_swap_amount = 3;

  // base_minimum_deposit specifies the minimum amount of the base token required for depositing into liquidity pools.
  int64 base_minimum_deposit = 4;

  // max_add_liquidity_slippage_percentage specifies the maximum slippage a user may encounter when adding liquidity.
  int64 max_add_liquidity_slippage_percentage = 5;

  // min_remove_liquidity_amount defines the minimum number of tokens required to initiate the unbonding process,
  // unless the entire amount (100%) is being removed.
  int64 min_remove_liquidity_amount = 6;

  // max_remove_liquidity_positions defines the maximum number of concurrent liquidity unbonding positions that a user can create.
  int64 max_remove_liquidity_positions = 7;

  // stableswap contains the custom attributes and configurations required for the StableSwap module.
  StableSwap stableswap = 8;
}

message StableSwap {
  // unbonding_block_delta defines the number of blocks between unbonding BeginBlocker executions.
  int64 unbonding_block_delta = 1;
}
